manifest/objects/BusItem__c.object
<CustomObject>
    <description>Used to transport information between instances</description>
    <fields>
        <fullName>GUID__c</fullName>
        <description>Item GUID for tracking across instances</description>
        <externalId>true</externalId>
        <label>GUID</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Payload__c</fullName>
        <description>JSON payload</description>
        <label>Payload</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Has this record been processed/send + acknowledged</description>
        <label>Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Record_Guid__c</fullName>
        <label>Record Guid</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Send_to__c</fullName>
        <label>Send to</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SourceOwnerId__c</fullName>
        <label>SourceOwnerId</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SourceUrl__c</fullName>
        <description>What started this exchange</description>
        <label>SourceUrl</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <description>where did this payload come from</description>
        <label>Source</label>
        <length>16</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>BusItem</label>
    <nameField>
        <displayFormat>BI-{00000000}</displayFormat>
        <label>BusItem Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BusItems</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>